--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2024"
 [dependencies]
 crossterm = "0.29.0"
 ratatui = "0.29"
-time = "0.3.41"
+time = { version = "0.3.41", features = ["local-offset"] }
