added space cycling completion level

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.99"
 crossterm = "0.29.0"
 ratatui = "0.29"
 time = { version = "0.3.41", features = ["local-offset"] }
