--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ ratatui = "0.29"
 time = { version = "0.3.41", features = ["local-offset"] }
 diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
 directories-next = "2.0.0"
+libsqlite3-sys = { version = "0.30", features = ["bundled"] }
